# cisco-advisory-impact-analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST  README.md  analyzer.py  fuelix.py  install.py  inventory.py  pyproject.toml  report.py  requirements.txt  run.py  ui.py  update.py  updater.py
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
brds/: 001-auto-updater.md  002-uninstall.md  template.md
cisco_advisory_impact_agent/: __init__.py  analyzer.py  cli.py  config.py  fuelix.py  inventory.py  report.py  ui.py  version.py
cisco_advisory_impact_analyzer/: __init__.py  analyzer.py  cisco.py  cli.py  config.py  ui.py  version.py
docs/: index.html
specs/001-inventory-output-folders/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-inventory-output-folders/checklists/: requirements.md
specs/001-inventory-output-folders/contracts/: cli.md
specs/002-docker-install-test/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-docker-install-test/checklists/: requirements.md
specs/002-docker-install-test/contracts/: cli.md
specs/003-auto-updater/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-auto-updater/checklists/: requirements.md
specs/003-auto-updater/contracts/: cli.md  release-artifacts.md
specs/004-uv-tool-distribution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-uv-tool-distribution/checklists/: requirements.md
specs/004-uv-tool-distribution/contracts/: cli.md  config.md
specs/005-self-uninstall/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-self-uninstall/checklists/: requirements.md
specs/005-self-uninstall/contracts/: uninstall-cli.md
tests/: test_banner.py  test_cli.py  test_config.py  test_extraction.py  test_folders.py  test_updater.py  test_version.py
tools/: install-test.sh  release.py  updater-sim.py
tools/install-test/: Dockerfile  README.md  test-install.sh
