[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cisco-advisory-impact-analyzer"
description = "AI-driven analysis of which firewalls in your inventory are impacted by a Cisco security advisory."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Xavient" }]
keywords = ["cisco", "security", "advisory", "firewall", "csaf", "vulnerability"]
dependencies = [
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]
dynamic = ["version"]

[project.scripts]
cisco-advisory-impact-analyzer = "cisco_advisory_impact_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/xavient/cisco-advisory-impact-analyzer"
Repository = "https://github.com/xavient/cisco-advisory-impact-analyzer"

# The committed VERSION file is the single source of truth for the product version
# (constitution "Versioning & releases" gate). setuptools reads its raw contents here and
# the tool reports it at runtime via importlib.metadata, so the committed version, the git
# tag, and the installed version can never drift.
[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools]
packages = ["cisco_advisory_impact_analyzer"]
