[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cisco-advisory-impact-analyzer"
description = "Agentic firewall impact analysis for Cisco security advisories"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "TELUS Digital" }]
keywords = ["cisco", "security", "advisory", "firewall", "csaf", "vulnerability"]
dependencies = [
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]
dynamic = ["version"]

[project.scripts]
caia = "cisco_advisory_impact_agent.cli:main"

[project.urls]
Homepage = "https://github.com/xavient/cisco-advisory-impact-analyzer"
Repository = "https://github.com/xavient/cisco-advisory-impact-analyzer"

# The committed VERSION file is the single source of truth for the product version
# (constitution "Versioning & releases" gate). setuptools reads its raw contents here and
# the tool reports it at runtime via importlib.metadata, so the committed version, the git
# tag, and the installed version can never drift.
[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools]
packages = ["cisco_advisory_impact_agent"]
